--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<section id="skills-right">
 				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under<a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University.
 				<ul>
-					<li><b>June 2015 - August 2016, &nbsp;  Lecturer, Department of ITM,<a href="https://www.ravenshawuniversity.ac.in/ target="_blank"" Ravenshaw University</a>, Cuttack, India.</b><li>
+					<li><b>June 2015 - August 2016, &nbsp;  Lecturer, Department of ITM,<a href="https://www.ravenshawuniversity.ac.in/" target="_blank">Ravenshaw University</a>, Cuttack, India.</b><li>
 					<li><b>June 2013 - January 2015, &nbsp; SRF, Tezpur central university,  Assam, India.</b><li>
 				</ul>
 			</section>
