--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<section id="education">
 		<h2>Education</h2>
 			<ul>
-			         <li><b>PhD (Computer Science, Joined in 2016), University of Hyderabad, India.</b></li>
-					<li><b>M.Tech.(Information Technology), 2013, Tezpur Central University, Assam , India.</b></li>
+			         <li><b>PhD (Computer Science, Joined in 2016), University of Hyderabad,  Hyderabad, India.</b></li>
+					<li><b>M.Tech.(Information Technology), 2013, Tezpur Central University, Tezpur, Assam , India.</b></li>
 				</ul>
 		</section>
 		
