--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			<section id="skills-right">
 				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under<a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University. My work was to analyze and investigate  the Codon Usage Bias (CUB) in bacterial genes sequences using C and Python programming and developed <a href="http://agnigarh.tezu.ernet.in/~ssankar/cbb_tu.html" target="_blank" >online tools </a> uisng PHP and Html.
 				<ul>
-					<li><b>June 2015 - August 2016,  Lecturer, Department of ITM, <a href="https://www.ravenshawuniversity.ac.in/" target="_blank"> Ravenshaw University </a>, Cuttack, Odisha, India.</b><li>
-					<li><b>June 2013 - January 2015,  SRF, Tezpur central university, Tezpur, Assam, India.</b><li>
+					<li>June 2015 - August 2016,  Lecturer, Department of ITM, <a href="https://www.ravenshawuniversity.ac.in/" target="_blank"> Ravenshaw University </a>, Cuttack, Odisha, India.<li>
+					<li>June 2013 - January 2015,  SRF, Tezpur central university, Tezpur, Assam, India.<li>
 				</ul>
 			</section>
 		</section>
@@ -63,8 +63,8 @@
 		<section id="education">
 		<h2>Education</h2>
 			<ul>
-			         <li><b>PhD (Computer Science, Joined in 2016), University of Hyderabad,  Hyderabad, India.</b></li>
-					<li><b>M.Tech.(Information Technology), 2013, Tezpur Central University, Tezpur, Assam , India.</b></li>
+			         <li>PhD (Computer Science, Joined in 2016), University of Hyderabad,  Hyderabad, India.</li>
+					<li>M.Tech.(Information Technology), 2013, Tezpur Central University, Tezpur, Assam , India.</li>
 				</ul>
 		</section>
 		
