--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				  <small><span>India, 500046</span></small>
 				
 				<small><span itemprop="email">Email Id:<font color="maroon"> sahooajitkumar85@gmail.com ,&nbsp; ajit@uohyd.ac.in</font></span></small>
-				<small><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>Google Scholar</b></font></a>&emsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &emsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a></small>
+				<small><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>Google Scholar</b></font></a>&emsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &emsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a> &emsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="4" color="#D35400"><b>GitHub</b></font></a></small>
 			</div>
 			
 			<div id="photo">
