--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 		<header class="clearfix">
 			<div id="info">			
 				<h1><span>Ajit Kumar Sahoo</span></h1>
-				<h3><span>Research Fellow, UGC-JRF/SRF</span></h3>
+				<h3><span>Research Fellow, UGC-JRF/SRF</span></h3>		
+				 <h4> <span>School of Computer and Information Sciences</span></h4>
+				<h4>  <span>University of Hyderabad</span></h4>
+				  <h4><span>India, 500046</span></h4>
 			
-				 <small> <span>School of Computer and Information Sciences</span></small>
-				 <small> <span>University of Hyderabad</span></small>
-				  <small><span>India, 500046</span></small>
-				
-				<small><span itemprop="email">Email Id:<font color="maroon"> sahooajitkumar85@gmail.com ,&nbsp; ajit@uohyd.ac.in</font></span></small>
-				<small><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>Google Scholar</b></font></a>&emsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &emsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a> &emsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="4" color="#D35400"><b>GitHub</b></font></a></small>
+				<h4><span itemprop="email">Email: sahooajitkumar85@gmail.com, ajit@uohyd.ac.in</span></h4>
+				<h3><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>Google Scholar</b></font></a>&emsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &emsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a> &emsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="4" color="#D35400"><b>GitHub</b></font></a>&emsp;<a href="https://publons.com/researcher/1448947/ajit-kumar-sahoo/"   target="_blank"><font size="4" color="#D35400"><b>Publons</b></font></a></h3>
 			</div>
 			
 			<div id="photo">
@@ -79,12 +78,43 @@
 			
 		</section>
 		
+		<!--<section id="Professional Activities">
+			<h2>Professional Activities</h2>
+				<ul><h3>Journal Reviewer</h3>
+					<li>UGC-NET-JRF, DECEMBER 2014</li>
+					<li>UGC-NET, JUNE 2014</li>
+					<li>GATE Fellowship (2011-2013)</li>
+				</ul>
+			
+			
+		</section> -->
+		
+		
+		
 		<section id="articles">
 			<h2>Research Publications</h2>
-	         <ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="5" color="blue"><b>Google Scholar</b></font></a></li></ul>
-		</section>
+	         <ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Google Scholar</b></font></a></li></ul>
+			 <li>
+    <!--<h5><a href="" target="_blank">paper name</a>
+	<b>authors </b>
+    <em>IEEE jor</em>, 2020<br>
+    <p style="margin-top:3px">
+
+    </p></h5>
+ </li>-->
+	      </section>
+	
+		
+		
 <hr class="bottom">
-	</div>
+      <div align="center">
+     © 2020 Ajit Kumar Sahoo. All rights reserved.
+     </div>
+</div>
+	
+	
+
 	
 </body>
 </html>
+
