--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				  <h4><span>India, 500046</span></h4>
 			
 				<h4><span itemprop="email">Email: sahooajitkumar85@gmail.com, ajit@uohyd.ac.in</span></h4>
-				<h3><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>GoogleScholar</b></font></a>&emsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &emsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a> &emsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="4" color="#D35400"><b>GitHub</b></font></a>&emsp;<a href="https://publons.com/researcher/1448947/ajit-kumar-sahoo/"   target="_blank"><font size="4" color="#D35400"><b>Publons</b></font></a></h3>
+				<h3><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="4" color="#D35400"><b>GoogleScholar</b></font></a>&nbsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="4" color="#D35400"><b>ORCID</b></font></a> &nbsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="4" color="#D35400"><b>ResearchGate</b></font></a> &emsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="4" color="#D35400"><b>GitHub</b></font></a>&emsp;<a href="https://publons.com/researcher/1448947/ajit-kumar-sahoo/"   target="_blank"><font size="4" color="#D35400"><b>Publons</b></font></a></h3>
 			</div>
 			
 			<div id="photo">
