--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 		<section id="profile">
 			<h2>About Me</h2>
-			<p >I am a PhD student at <a href="https://scis.uohyd.ac.in/" target="_blank">School of Computer and Information Sciences</a>, <a href="http://www.uohyd.ac.in/" target="_blank"> University of Hyderabad</a>, India. I am working under the supervision of <a href="https://scholar.google.co.in/citations?user=3Dgm2bQAAAAJ&hl=en&oi=ao" target="_blank"> Professor Siba Kumar Udgata</a>, SCIS, UoH. My research area is machine learning applications in wireless networks and sensors.  Currently, I am working on WiFi  Received Signal Strength Information (RSSI) and  Channel State Information (CSI) for object identification and tracking using machine learning techniques. </p>
+			<p >I am a PhD student at <a href="https://scis.uohyd.ac.in/" target="_blank">School of Computer and Information Sciences</a>, <a href="http://www.uohyd.ac.in/" target="_blank"> University of Hyderabad</a>, India. I am working under the supervision of <a href="https://scholar.google.co.in/citations?user=3Dgm2bQAAAAJ&hl=en&oi=ao" target="_blank"> Professor Siba Kumar Udgata</a>, SCIS, UoH. My research area is machine learning applications in wireless networks and sensors. </p>
 			
 			<p></p>
 		</section>
