--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 		
 		<section id="articles">
 			<h2>Research Publications</h2>
-	         <ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Google Scholar</b></font></a></li></ul>
+			<p> For Latest publication please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Link</b></p>
+	         <!--<ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Google Scholar</b></a></li></ul> -->
 		<!--	 <li>
     <h5><a href="" target="_blank">paper name</a>
 	<b>authors </b>
