--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		
 		<section id="articles">
 			<h2>Research Publications</h2>
-			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#0000EE"><b>Link</b></font></p>
+			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#0000EE"><b>Link</b></font></a></p>
 	         <!--<ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Google Scholar</b></a></li></ul> -->
 		<!--	 <li>
     <h5><a href="" target="_blank">paper name</a>
@@ -109,7 +109,7 @@
 		
 <hr class="bottom">
       <div align="center">
-     © 2020 Ajit Kumar Sahoo. All rights reserved.
+     © 2020 <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank">Ajit Kumar Sahoo. All rights reserved.
      </div>
 </div>
 </body>
