--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		
 <hr class="bottom">
       <div align="center">
-     © 2020 <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank">Ajit Kumar Sahoo. All rights reserved.
+     © 2020 Ajit Kumar Sahoo. All rights reserved.
      </div>
 </div>
 </body>
