--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Ajit Kumar Sahoo</title>
   <meta name="author" content="Ajit Kumar Sahoo">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="HandheldFriendly" content="true">
-  <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+  <!--<meta name="HandheldFriendly" content="true">-->
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"> -->
   <link rel="shortcut icon" type="image/png" href="images/fav.ico"/>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -27,12 +27,13 @@
 				<h4>  <span>University of Hyderabad</span></h4>
 				  <h4><span>India, 500046</span></h4>
 			
-				<h4><span itemprop="email">Email: sahooajitkumar85@gmail.com, ajit@uohyd.ac.in</span></h4>
-				<!--<a href="https://sites.google.com/view/indetails/home" target="_blank"><font size="3" color="#D35400"><b>MyBlog</b></font></a>&nbsp;&nbsp;&nbsp;--><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>GoogleScholar</b></font></a>&nbsp;&nbsp;&nbsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><font size="3" color="#D35400"><b>ResearchGate</b></font></a> &nbsp;&nbsp;&nbsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><font size="3" color="#D35400"><b>ORCID</b></font></a>&nbsp;&nbsp;&nbsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><font size="3" color="#D35400"><b>GitHub</b></font></a>
+				<h5><span itemprop="email">Email: sahooajitkumar85@gmail.com, ajit@uohyd.ac.in</span></h5>
+				<a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"  ><img src="images/gs.png" alt="googlescholar" title="GoogleScholar" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><img src="images/rg.png" alt="researchgate" title="ResearchGate" style="width:30px;height:30px;"></a> 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><img src="images/orcid.png" alt="0000-0001-7536-0893" title="ORCID" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><img src="images/github.png" alt="github" title="GitHub" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a  href="" target="_blank"><img src="images/myweb.png" alt="mywebsite" title="website (under constuction)" style="width:30px;height:30px;"></a>
 			</div>
 			
 			<div id="photo">
-				<img src="/images/aks.jpg" alt="AKS" />
+				<img src="images/aks.jpg" alt="AKS" />
 			</div>
 		</header>
 		
@@ -47,16 +48,16 @@
 			<p></p>
 		</section>
 		
-		<section id="skills" class="clearfix">
-			<h2 itemprop="name">Experience</h2>
+		<section id="skills">
+			<h2>Experience</h2>
 			
-			<section id="skills-right">
-				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under<a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University. My work was to analyze and investigate  the Codon Usage Bias (CUB) in bacterial genes sequences using C and Python programming and developed <a href="http://agnigarh.tezu.ernet.in/~ssankar/cbb_tu.html" target="_blank" >online tools </a> using PHP and Html.
+			
+				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under <a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University. My work was to analyze and investigate  the Codon Usage Bias (CUB) in bacterial genes sequences using C and Python programming and developed <a href="http://agnigarh.tezu.ernet.in/~ssankar/cbb_tu.html" target="_blank" >online tools </a> using PHP and Html.</p>
 				<ul>
-					<li>June 2015 - August 2016,  Lecturer, Department of ITM, <a href="https://www.ravenshawuniversity.ac.in/" target="_blank"> Ravenshaw University </a>, Cuttack, Odisha, India.<li>
-					<li>June 2013 - January 2015,  SRF, Tezpur central university, Tezpur, Assam, India.<li>
+					<li>June 2015 - August 2016,  Lecturer, Department of ITM, <a href="https://www.ravenshawuniversity.ac.in/" target="_blank"> Ravenshaw University </a>, Cuttack, Odisha, India.</li>
+					<li>June 2013 - January 2015,  SRF, Tezpur central university, Tezpur, Assam, India.</li>
 				</ul>
-			</section>
+			
 		</section>
 		
 		<section id="education">
@@ -78,38 +79,20 @@
 			
 		</section>
 		
-		<!--<section id="Professional Activities">
-			<h2>Professional Activities</h2>
-				<ul><h3>Journal Reviewer</h3>
-					<li>UGC-NET-JRF, DECEMBER 2014</li>
-					<li>UGC-NET, JUNE 2014</li>
-					<li>GATE Fellowship (2011-2013)</li>
-				</ul>
-			
-			
-		</section> -->
 		
 		
 		
 		<section id="articles">
 			<h2>Research Publications</h2>
-			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#0000EE"><b>Link</b></font></a></p>
-	         <!--<ul><li><a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><font size="3" color="#D35400"><b>Google Scholar</b></a></li></ul> -->
-		<!--	 <li>
-    <h5><a href="" target="_blank">paper name</a>
-	<b>authors </b>
-    <em>IEEE jor</em>, 2020<br>
-    <p style="margin-top:3px">
-
-    </p></h5>
- </li>-->
+			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><b>Link</b></a></p>
+	         
 	      </section>
 	
 		
 		
 <hr class="bottom">
-      <div align="center">
-     © 2020 Ajit Kumar Sahoo. All rights reserved.
+      <div style="text-align:center;">
+     © 2021 Ajit Kumar Sahoo. All rights reserved.
      </div>
 </div>
 </body>
