--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h2>Experience</h2>
 			
 			
-				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under <a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University. My work was to analyze and investigate  the Codon Usage Bias (CUB) in bacterial genes sequences using C and Python programming and developed <a href="http://agnigarh.tezu.ernet.in/~ssankar/cbb_tu.html" target="_blank" >online tools </a> using PHP and Html.</p>
+				<p> Worked as a  Senior Research Fellow (SRF) in a DBT funded project in the area of  Molecular biology and Bioinformatics at <a href="http://www.tezu.ernet.in/" target="_blank"> Tezpur central university</a>, Assam, India., under <a href="https://scholar.google.co.in/citations?user=F1q8PkUAAAAJ&hl=en" target="_blank"> Dr. Siddhartha Shankar Satapathy</a>, Associate Professor, Department of Computer Science and Engineering, Tezpur University. My work was to analyze and investigate  the Codon Usage Bias (CUB) in bacterial genes sequences using C and Python programming and developed <a href="http://agnigarh.tezu.ernet.in/~ssankar/cbb_tu.html" target="_blank" >online tools </a> using PHP and html.</p>
 				<ul>
 					<li>June 2015 - August 2016,  Lecturer, Department of ITM, <a href="https://www.ravenshawuniversity.ac.in/" target="_blank"> Ravenshaw University </a>, Cuttack, Odisha, India.</li>
 					<li>June 2013 - January 2015,  SRF, Tezpur central university, Tezpur, Assam, India.</li>
