--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/aks.jpg" alt="AKS" />
+				<img src="images/aks.jpg" alt="Ajit Kumar Sahoo" />
 			</div>
 		</header>
 		
