--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		
 		<section id="articles">
 			<h2>Research Publications</h2>
-			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"><b>Link</b></a></p>
+			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank">Link</a></p>
 	         
 	      </section>
 	
