--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		
 		
 <hr class="bottom">
-      <div style="text-align:center;">
+      <div  class="bottom" style="text-align:center;">
      © 2021 Ajit Kumar Sahoo. All rights reserved.
      </div>
 </div>
