--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				<h4>  <span>University of Hyderabad</span></h4>
 				  <h4><span>India, 500046</span></h4>
 			
-				<h5><span itemprop="email">Email: sahooajitkumar85@gmail.com</span></h5>
-				<h5><span itemprop="email">Email: ajit@uohyd.ac.in</span></h5>
+				<h5><span itemprop="email">Email: sahooajitkumar85@gmail.com <br/>
+			Email: ajit@uohyd.ac.in</span></h5>
 				<a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank"  ><img src="images/gs.png" alt="googlescholar" title="GoogleScholar" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  href="https://www.researchgate.net/profile/Ajit_Sahoo11" target="_blank"><img src="images/rg.png" alt="researchgate" title="ResearchGate" style="width:30px;height:30px;"></a> 
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://orcid.org/0000-0001-7536-0893"  target="_blank"><img src="images/orcid.png" alt="0000-0001-7536-0893" title="ORCID" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  href="https://github.com/sahooajitkumar" target="_blank"><img src="images/github.png" alt="github" title="GitHub" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  href="https://www.linkedin.com/in/ajit-kumar-sahoo-085018b5/" target="_blank"><img src="images/linkedin.png" alt="linkedin" title="LinkedIn" style="width:30px;height:30px;"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a  href="" target="_blank"><img src="images/myweb.png" alt="mywebsite" title="website (under constuction)" style="width:30px;height:30px;"></a>
 			</div>
