--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				<h1><span>Ajit Kumar Sahoo</span></h1>
 				<h3><span>Research Fellow, UGC-JRF/SRF</span></h3>		
 				 <h4> <span>School of Computer and Information Sciences</span></h4>
-				<h4>  <span>University of Hyderabad</span></h4>
-				  <h4><span>India, 500046</span></h4>
+				<h4>  <span>University of Hyderabad, C R Rao Road, Gachibowli</span></h4>
+				  <h4><span>Telangana,India, 500046</span></h4>
 			
 				<h5><span itemprop="email">Email: sahooajitkumar85@gmail.com <br/>
 			Email: ajit@uohyd.ac.in</span></h5>
