--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<h3><span>Research Fellow, UGC-JRF/SRF</span></h3>		
 				 <h4> <span>School of Computer and Information Sciences</span></h4>
 				<h4>  <span>University of Hyderabad, C R Rao Road, Gachibowli</span></h4>
-				  <h4><span>Telangana,India, 500046</span></h4>
+				  <h4><span>Hyderabad, Telangana, India, 500046</span></h4>
 			
 				<h5><span itemprop="email">Email: sahooajitkumar85@gmail.com <br/>
 			Email: ajit@uohyd.ac.in</span></h5>
@@ -85,7 +85,7 @@
 		
 		<section id="articles">
 			<h2>Research Publications</h2>
-			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank">Link</a></p>
+			<p> For publication details please visit the <a href="https://scholar.google.co.in/citations?user=i0wMaU4AAAAJ&hl=en"   target="_blank" alt="GoogleScholar">Link</a></p>
 	         
 	      </section>
 	
