--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Ajit Kumar Sahoo</title>
   <meta name="author" content="Ajit Kumar Sahoo">
   <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
   <!--<meta name="HandheldFriendly" content="true">-->
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"> -->
+ <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="shortcut icon" type="image/png" href="images/fav.ico"/>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
