--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <link rel="shortcut icon" type="image/png" href="images/fav.ico"/>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
+<script>
+  var viewMode = getCookie("view-mode");
+     if(viewMode == "desktop"){
+           viewport.setAttribute('content', 'width=1024');
+      }else if (viewMode == "mobile"){
+    viewport.setAttribute('content', 'width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no');
+      }
+</script> 	
 </head>
 
 
