--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="shortcut icon" type="image/png" href="images/fav.ico"/>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/responsive.css">
+  <!--<link rel="stylesheet" type="text/css" href="css/responsive.css"> -->
 <script>
   var viewMode = getCookie("view-mode");
      if(viewMode == "desktop"){
