--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/aks.jpg" alt="Ajit Kumar Sahoo" />
+				<img src="images/ajit.jpg" alt="Ajit Kumar Sahoo" />
 			</div>
 		</header>
 		
